<resources>
    <string name="app_name">login</string>
    <string name="title_activity_mainpage">Mainpage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="map"><u>Map of confirmed cases per million residents</u></string>

    <string name="map1"><u>Map of active COVID-19 cases in India</u></string>
    <string name="refresh">Refresh</string>
    <string name="emergency_contact_number"><u>Emergency Contact Number</u>\n 1075 or 011-23978046.</string>
    <string name="confirmed_cases_of_covid_19_cases_in_india_by_state_and_ut"><u>Confirmed cases of COVID-19 cases in India</u></string>
    <string name="map_covid_19_deaths_in_india"><u>Map COVID-19 deaths in India</u></string>
    <string name="our_analysis"><u>Govt. Analysis</u></string>
    <string name="your_state_name"><u>Bihar</u></string>
    <string name="person_in_contact"><u>Person in contact</u></string>
    <string name="maximum_seats"><u>Maximum seats</u></string>
    <string name="date_and_time"><u>Date and time</u></string>
    <string name="contact_number"><u>contact Number</u></string>
    <string name="description"><u>Description</u></string>
    <string name="location"><u>Location</u></string>

    <string-array name="typeoffeedback">


        <item>Select Type Of Feedback</item>
        <item>Reporting a nearby corona case</item>
        <item>Need Govt. support</item>
        <item>Queries Regarding Lockdown</item>
        <item>Lack of Medical Facilities</item>
        <item>Custom</item>

    </string-array>



    <string-array name="stateList">


        <item><u>Select Your State</u></item>
        <item><u>Andaman and Nicobar Islands</u></item>
        <item><u>Andhra Pradesh</u></item>
        <item><u>Arunachal Pradesh</u></item>
        <item><u>Assam</u></item>
        <item><u>Bihar</u></item>
        <item><u>Chandigarh</u></item>
        <item><u>Chhattisgarh</u></item>
        <item><u>Dadra and Nagar Haveli and Daman and Diu</u></item>
        <item><u>Delhi</u></item>
        <item><u>Goa</u></item>
        <item><u>Gujarat</u></item>
        <item><u>Haryana</u></item>
        <item><u>Himachal Pradesh</u></item>
        <item><u>Jammu and Kashmir</u></item>
        <item><u>Jharkhand</u></item>
        <item><u>Karnataka</u></item>
        <item><u>Kerala</u></item>
        <item><u>Ladakh</u></item>
        <item><u>Lakshadweep</u></item>
        <item><u>Madhya Pradesh</u></item>
        <item><u>Maharashtra</u></item>
        <item><u>Manipur</u></item>
        <item><u>Meghalaya</u></item>
        <item><u>Mizoram</u></item>
        <item><u>Nagaland</u></item>
        <item><u>Odisha</u></item>
        <item><u>Puducherry</u></item>
        <item><u>Punjab</u></item>
        <item><u>Rajasthan</u></item>
        <item><u>Sikkim</u></item>
        <item><u>Tamil Nadu</u></item>
        <item><u>Telangana</u></item>
        <item><u>Tripura</u></item>
        <item><u>Uttar Pradesh</u></item>
        <item><u>Uttarakhand</u></item>
        <item><u>West Bengal</u></item>



    </string-array>




    <string-array name="type0fService">


        <item>Select Type Of Service</item>
        <item>Providing Food</item>
        <item>Providing Essential Items other than Food</item>
        <item>Providing Work to Poor or Monetary help</item>
        <item>Providing Masks or Sanitizers</item>
        <item>Custom</item>

    </string-array>


    <string-array name="typeofgender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>


    <string-array name="typeOfTime">
        <item>A.M.</item>
        <item>P.M.</item>
    </string-array>

</resources>
