<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >


    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/emergency_contact_number"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="675dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="643dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="7dp"
                android:text="@string/your_state_name"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="19sp" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="7dp"
                android:layout_marginTop="30dp"
                android:text="Confirmed Cases - "
                android:layout_marginLeft="10dp"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cnfcases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="7dp"
                android:layout_toRightOf="@id/textView6"
                android:layout_marginTop="30dp"
                android:text="10000"
                android:textColor="#000000"
                android:textSize="15sp" />


            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView2"
                android:layout_width="204dp"
                android:layout_height="288dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="127dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="215dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:paddingVertical="7dp"
                android:layout_marginTop="80dp"
                android:text="@string/confirmed_cases_of_covid_19_cases_in_india_by_state_and_ut"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView4"
                android:layout_width="204dp"
                android:layout_height="288dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="474dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="415dp"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:text="@string/map_covid_19_deaths_in_india"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView1"
                android:layout_width="204dp"
                android:layout_height="288dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="127dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="190dp"
                android:layout_height="80dp"
                android:paddingVertical="7dp"
                android:layout_marginTop="80dp"
                android:text="@string/map"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView3"
                android:layout_width="204dp"
                android:layout_height="288dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="474dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="210dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="415dp"
                android:gravity="center"
                android:text="@string/map1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="844dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="765dp"
                android:gravity="center"
                android:text="@string/our_analysis"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />


        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>